fix patreon box text spilling over

--- a/templates/default/css/style.css
+++ b/templates/default/css/style.css
@@ -1565,7 +1565,6 @@ svg.svggraph text {font-family: "Open Sans", "Source Sans Pro", "HelveticaNeue-L
 .poll_content{padding: 4px;}
 .patreon {
 	margin-top: 14px;
-	height: 30px;
 	line-height: 30px;
 }
 .preview_pm{display: none;}
